styles.css
/* General styling applying to the entire document, for example background. */

html {
    scroll-behavior: smooth;
}

.body {
    background-color: rgb(249, 251, 252);
}

.site {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("resources/img/background.jpg");
    background-color: rgb(249, 251, 252);
    background-repeat: no-repeat;
    background-position: top center;
    background-size: contain;
    height: 100%;
    
}

/* Styling for the top navigation bar. */

.topNav {
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    font-family: "Alike Angular";
    font-size: 1.65rem;
    background-color: rgb(230, 212, 200);
}

.topNav a {
    padding: 1.5rem;
    transition-duration: 1s;
}

.topNav a:hover {
    background-color: rgba(255,255,255,0.5);
    color: black;
}

/* Styling applying to the "heading", inluding the profile picture, name, subheading and the short introduction. */

.heading {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(4, 1fr);
    padding: 10px 10px 80px 10px;
    margin: 150px 150px 50px 150px;
    justify-content: space-between;
}

.heading__pic {
    align-self: center;
    border-radius: 50%;
    grid-column: 1 / 3 ;
    grid-row: 1 / 5;
    max-width: 400px;
    border: 12px double rgb(112, 141, 109);
    margin: 10px;
}

.heading__name {
    font-family: "Sofia";
    font-size: 7rem;
    text-shadow: 8px 2px rgb(181, 224, 177);
    text-align: right;
    grid-column: 3 / 7;
    grid-row: 1 / 3;
    margin: 10px 10px 0px 10px;
    padding: 10px 10px 0px 10px;
}

.heading__subHeading {
    font-family: "Alike Angular";
    font-size: 3rem;
    text-shadow: 2px 2px rgb(188, 161, 143);;
    text-align: right;
    grid-column: 4 / 7;
    margin: 0px 10px;
    padding: 0px 10px;
}

.heading__description {
    font-family: "Alike Angular";
    font-size: 1.65rem;
    text-align: right;
    grid-column: 3 / 7;
    margin: 0px 10px 10px 10px;
    padding: 0px 10px 10px 10px;
}

/* Styling for the three skill-boxes with their icons. */

.skills {
    display: flex;
    justify-content: center;
    background-color: rgb(249, 251, 252);
}

.icon {
    max-height: 100px;
    margin: 100px 50px 0px 50px;
    border: 8px outset rgb(188, 161, 143);
    border-radius: 5%;
}

/* General styling for the project-container "content". In this container, all projects will be situated in the portfolio. */

.content {
    display: flex;
    flex-direction: column;
    background-color: rgb(249, 251, 252);
    margin: 0px;
    padding: 10px 200px;
}

a:link {
    color: inherit;
    text-decoration: none;
}

a:visited {
    color: darkslategray;
}

a:hover {
    color: rgb(112, 141, 109);
    text-decoration: underline;
}

/* Styling for the boxes including each individual project. In each project flexbox there are a picture, a heading (which is also a link) and a description.
As the second project is situated to the right rather than to the right, it has it's own CSS styling in the first block. */

.project1, .project3 {
    display: flex;
    justify-content: left;
    background-color: rgb(197, 224, 195);
    margin: 100px 200px 50px 200px;
    padding: 10px;   
}

.project2 {
    display: flex;
    background-color: rgb(249, 251, 252); 
    flex-direction: row-reverse;
    justify-content: right;
    margin: 50px 200px;
    padding: 10px;
}

.project1__texts, .project2__texts, .project3__texts {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: 10px;
    margin: 10px;
}

.project1__pic, .project2__pic, .project3__pic {
    max-width: 40%;
    margin: 10px 50px 10px 10px;
}

.project1__heading, .project2__heading, .project3__heading {
    font-family: "Alike Angular";
    font-size: 2rem;
    text-align: left;
}

.project1__description, .project2__description, .project3__description {
    margin: 0px;
    font-family: "Alike Angular";
    font-size: 1.5rem; 
}

/* Styling for the last container which is a flexbox containing contact information. */

.contactInfo {
    display: flex;
    background-color: rgb(230, 212, 200);
    margin: 100px 10px;
    padding: 10px;
    justify-content: space-around;
    align-items: center;
}

.contactInfo__info {
    text-align: center;
    font-family: "Alike Angular";
    font-size: 1.3rem;
    margin: 10px;
}

.contactInfo a {
    padding: 0.5rem;
    transition-duration: 1s;
}

.contactInfo a:hover {
    background-color: rgba(255,255,255,0.5);
    color: black;
}

/* Below are the responsive stylings depending on screen size. */

@media only screen and (max-width: 1900px) {

    .heading {
        padding: 10px;
        margin: 10px;
    }

    .heading__pic {
        max-width: 500px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 7rem;
        text-align: right;
        padding-top: 50px;
    }

    .heading__subHeading {
        font-size: 3rem;
        text-shadow: none;
        text-align: right;
        margin: 10px;
    }

    .heading__description {
        font-size: 2rem;
        text-align: right;
        margin-top: 10px;
    }

    .skills {
        padding-top: 50px;
    }

    .icon {
        margin: 50px 100px;
        max-width: 30%;
    }

    .content {
        padding: 100px;
    }
    
    .project1, .project2, .project3 {
        margin: 10px;
        padding: 20px;
    }

}

@media only screen and (max-width: 1299px) {

    .topNav {
        font-size: 1.5rem;
    }

    .topNav a {
        padding: 0.5rem;
    }

    .heading {
        padding: 10px;
        margin: 10px;
    }

    .heading__pic {
        max-width: 300px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 5rem;
        text-align: right;
    }

    .heading__subHeading {
        font-size: 2rem;
        text-shadow: none;
        text-align: right;
        margin: 10px;
    }

    .heading__description {
        font-size: 1.3rem;
        text-align: right;
        margin-top: 10px;
    }

    .icon {
        margin: 50px 30px;
        max-width: 10%;
    }

    .content {
        padding: 50px;
    }
    
    .project1__heading, .project2__heading, .project3__heading {
        font-size: 1.5rem;
    }

    .project1__description, .project2__description, .project3__description {
        font-size: 1rem; 
    }
    
}

@media only screen and (min-width: 1000px) and (max-width: 1299px) {

    .topNav {
        font-size: 1.4rem;
    }

    .project1__heading, .project2__heading, .project3__heading {
        font-size: 2rem;
    }
    
    .project1__description, .project2__description, .project3__description {
        font-size: 1.4rem;
    }
}

@media only screen and (max-width: 800px) {
    
    .topNav {
        font-size: 0.9rem;
    }

    .topNav a {
        padding: 0.8rem;
    }

    .heading {
        padding: 10px;
        margin: 10px;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    }

    .heading__pic {
        max-width: 280px;
        margin-top: 50px;
    }

    .heading__name {
        font-size: 3rem;
        text-align: center;
    }

    .heading__subHeading {
        font-size: 1.5rem;
        text-shadow: none;
        text-align: center;
        margin: 10px;
    }

    .heading__description {
        font-size: 1.2rem;
        text-align: center;
        margin-top: 10px;
    }

    .skills {
        padding-top: 50px;
        flex-wrap: wrap;
        align-items: flex-start;
        margin-bottom: 50px;
    }

    .icon {
        margin: 5px;
        max-width: 15%;
    }

    .content {
        flex-wrap: wrap;
        padding: 0px;
        padding-top: 30px;
    }
    
    .project1, .project2, .project3 {
        flex-wrap: wrap;
        justify-content: center;
        align-items: flex-start; 
        /* Align items needed because of known safari bug that stretches content to its full size rather than within its parent. */
        margin: 10px;
        padding: 5px;
    }

    .project1__pic, .project2__pic, .project3__pic {
        max-width: 250px;
        margin: 40px 10px 10px 10px;
    }

    .project1__heading, .project2__heading, .project3__heading {
        margin: 10px;
        font-size: 2rem;
        text-align: center;
    }

    .project1__description, .project2__description, .project3__description {
        margin: 0px;
        font-family: "Alike Angular";
        font-size: 1.2rem; 
    }

    .contactInfo {
        flex-wrap: wrap;
        font-size: 0.9rem;
        align-items: center;
        margin: 50px 10px;
    }

    .contactInfo a {
        padding: 0.1rem;
    }

}

